<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/SearchTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/contact_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/SearchEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SearchTitleLabel"
        android:layout_marginBottom="150dp"
        android:gravity="bottom|left|center_horizontal"
        android:height="100dp"
        android:inputType="none"
        android:text="@string/results_here"
        android:textSize="40sp" />

    <Button
        android:id="@+id/BtnPhoneUkras2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SearchEdit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon" />

    <TextView
        android:id="@+id/SearchPerformanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnPhoneUkras2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/performance_text" />

</RelativeLayout>